# libbdgt

./: .gitignore  Cargo.toml  README.md
doc/: db-schema.md  synchronization.md
sql/: creation.sql
src/: budget.rs  config.rs  datetime.rs  error.rs  lib.rs
src/core/: budget.rs  changelog.rs  config.rs  mod.rs
src/crypto/: buffer.rs  engine.rs  gpg_engine.rs  kdf.rs  key.rs  mod.rs  prng.rs  symmetric.rs
src/location/: home.rs  location.rs  mod.rs
src/storage/: data.rs  db_storage.rs  mod.rs  remote_db_storage.rs  remote_storage.rs  storage.rs
src/sync/: engine.rs  git_engine.rs  mod.rs  syncable.rs
