[package]
name = "libbdgt"
version = "1.0.2"
edition = "2021"
repository = "https://github.com/GeorgyFirsov/libbdgt"
homepage = "https://github.com/GeorgyFirsov/libbdgt"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
flexbuffers = "2.0.0"
auth-git2 = "0.5.3"
aes-gcm = "0.10.3"
typenum = "1.17.0"
gpgme = "0.11.0"
dirs = "5.0.1"
git2 = "0.18.1"
rand = { version = "0.8.5", features = ["std_rng"] }
uuid = { version = "1.4.1", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
scrypt = { version = "0.11.0", default-features = false }
rusqlite = { version = "0.30.0", features = ["chrono"] }
